@@ -13,7 +13,7 @@ AC_PROG_INTLTOOL([0.21])
 dnl ================= Requirements ================================================
 
 VTE_REQUIRED=0.17.1
-GTK_REQUIRED=2.14.0
+GTK_REQUIRED=2.18.0
 GLIB_REQUIRED=2.12.0
 GTKSOURCEVIEW_REQUIRED=0.3.0
 GTKSOURCEVIEW2_REQUIRED=2.0.2
