@@ -1,3 +1,10 @@
+Tue Jun 28 14:09:30 2011  Jiri (George) Lebl <jirka@5z.com>
+
+	* src/gnome-genius.c, ve/ve-miscui.c: update some deprecated things
+
+	* configure.in: require gtk 2.18 (my current benchmark for
+	  gtk version allowed: it appears in current Scientific Linux)
+
 Tue Jun 28 13:08:19 2011  Jiri (George) Lebl <jirka@5z.com>
 
 	* src/gnome-genius.c: use pid_t properly
